[tool.poetry]
name = "digitname"
version = "0.1.0"
description = "A tool to manage development accounts and generate portfolio"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "digitname", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.2"
requests = "^2.31.0"
rich = "^13.5.2"
pytest = {version = "^7.4.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
black = {version = "^23.7.0", optional = true}
isort = {version = "^5.12.0", optional = true}
flake8 = {version = "^6.1.0", optional = true}
mypy = {version = "^1.4.1", optional = true}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
