[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv,venv
per-file-ignores =
    # Allow `import *` in __init__.py files
    __init__.py: F403,F401
    # Ignore line-too-long for URLs in comments
    # E501
    # Ignore line-too-long for docstrings
    # E501
    # Ignore line-too-long for strings with URLs
    # E501
    # Ignore line-too-long for long test names
    tests/*.py: E501

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
known_first_party = digitname

[coverage:run]
source = digitname
omit = 
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    raise NotImplemented
    @abstractmethod
    @staticmethod
    @classmethod
    @property
    # Don't complain about logging format strings.
    %\(.+\)\s*$
